--- a/Tutorlink/src/pages/Materials/Materials.css
+++ b/Tutorlink/src/pages/Materials/Materials.css
@@ -1,5 +1,10 @@
+.container{
+  margin: 0 auto;
+  padding: 0;
+}
 .materials-container {
-    padding: 2rem;
+  
+    padding: 5rem;
     max-width: 1200px;
     margin: 0 auto;
   }
