--- a/Tutorlink/src/pages/courses/Courses.css
+++ b/Tutorlink/src/pages/courses/Courses.css
@@ -1,7 +1,11 @@
+.container{
+  margin: 0 auto;
+  padding: 0;
+}
 .courses-container {
   
     padding: 80px 20px;
-    margin-top: 64px;
+    margin: 0 auto;
   }
   
   .courses-title {
